71 - fix flex gap

--- a/src/shared/ui/Stack/Flex/Flex.module.scss
+++ b/src/shared/ui/Stack/Flex/Flex.module.scss
@@ -42,10 +42,6 @@
   flex-direction: column;
 }
 
-.gap0 {
-  gap: 0px;
-}
-
 .gap4 {
   gap: 4px;
 }
